fix: fixed white space after hero-section

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -559,7 +559,7 @@ a {
   }
 
   .hero__container{
-    background: url(./assets/img/tablet-head.jpg) center -90px no-repeat;
+    background: url(./assets/img/tablet-head.jpg) center -89px no-repeat;
     background-size: auto;
     padding: 78px 0 152px 60px;
     height: 500px;
